--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -155,3 +155,17 @@
 	Abstract = {An algorithm for reducing the time necessary to match a large set of peptide tandem mass spectra with a list of protein sequences is described. This algorithm breaks the process into multiple steps. A rapid survey step identifies all protein sequences that are reasonable candidates for a match with a set of tandem mass spectra. These candidates are then used as models, which are refined by detailed analysis of the set of tandem mass spectra for evidence of incomplete enzymatic hydrolysis, non-specific hydrolysis and chemical modifications of amino acid residues resulting from either post-translational modifications or sample handling. Compared with current one-step methods for matching proteins to mass spectra, this multiple-step method can decrease the time required for the calculation by several orders of magnitude.},
 	URL = {https://doi.org/10.1002/rcm.1198},
 }
+@article {PMID10612281,
+	Title = {Probability-based protein identification by searching sequence databases using mass spectrometry data},
+	Author = {Perkins, DN and Pappin, DJ and Creasy, DM and Cottrell, JS},
+	DOI = {10.1002/(sici)1522-2683(19991201)20:18&lt;3551::aid-elps3551&gt;3.0.co;2-2},
+	Number = {18},
+	Volume = {20},
+	Month = {December},
+	Year = {1999},
+	Journal = {Electrophoresis},
+	ISSN = {0173-0835},
+	Pages = {3551—3567},
+	Abstract = {Several algorithms have been described in the literature for protein identification by searching a sequence database using mass spectrometry data. In some approaches, the experimental data are peptide molecular weights from the digestion of a protein by an enzyme. Other approaches use tandem mass spectrometry (MS/MS) data from one or more peptides. Still others combine mass data with amino acid sequence data. We present results from a new computer program, Mascot, which integrates all three types of search. The scoring algorithm is probability based, which has a number of advantages: (i) A simple rule can be used to judge whether a result is significant or not. This is particularly useful in guarding against false positives. (ii) Scores can be compared with those from other types of search, such as sequence homology. (iii) Search parameters can be readily optimised by iteration. The strengths and limitations of probability-based scoring are discussed, particularly in the context of high throughput, fully automated protein identification.},
+	URL = {https://doi.org/10.1002/(SICI)1522-2683(19991201)20:18&lt;3551::AID-ELPS3551&gt;3.0.CO;2-2},
+}
