--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -183,3 +183,15 @@
 	Abstract = {Efficient analysis of very large amounts of raw data for peptide identification and protein quantification is a principal challenge in mass spectrometry (MS)-based proteomics. Here we describe MaxQuant, an integrated suite of algorithms specifically developed for high-resolution, quantitative MS data. Using correlation analysis and graph theory, MaxQuant detects peaks, isotope clusters and stable amino acid isotope-labeled (SILAC) peptide pairs as three-dimensional objects in m/z, elution time and signal intensity space. By integrating multiple mass measurements and correcting for linear and nonlinear mass offsets, we achieve mass accuracy in the p.p.b. range, a sixfold increase over standard techniques. We increase the proportion of identified fragmentation spectra to 73% for SILAC peptide pairs via unambiguous assignment of isotope and missed-cleavage state and individual mass precision. MaxQuant automatically quantifies several hundred thousand peptides per SILAC-proteome experiment and allows statistically robust identification and quantification of &gt;4,000 proteins in mammalian cell lysates.},
 	URL = {https://doi.org/10.1038/nbt.1511},
 }
+@article {PMID27122644,
+	Title = {Scientific workflows for bibliometrics},
+	Author = {Guler, Arzu Tugce and Waaijer, Cathelijn J F and Palmblad, Magnus},
+	DOI = {10.1007/s11192-016-1885-6},
+	Volume = {107},
+	Year = {2016},
+	Journal = {Scientometrics},
+	ISSN = {0138-9130},
+	Pages = {385—398},
+	Abstract = {Scientific workflows organize the assembly of specialized software into an overall data flow and are particularly well suited for multi-step analyses using different types of software tools. They are also favorable in terms of reusability, as previously designed workflows could be made publicly available through the myExperiment community and then used in other workflows. We here illustrate how scientific workflows and the Taverna workbench in particular can be used in bibliometrics. We discuss the specific capabilities of Taverna that makes this software a powerful tool in this field, such as automated data import via Web services, data extraction from XML by XPaths, and statistical analysis and visualization with R. The support of the latter is particularly relevant, as it allows integration of a number of recently developed R packages specifically for bibliometrics. Examples are used to illustrate the possibilities of Taverna in the fields of bibliometrics and scientometrics.},
+	URL = {https://europepmc.org/articles/PMC4833826},
+}
