--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -195,3 +195,17 @@
 	Abstract = {Scientific workflows organize the assembly of specialized software into an overall data flow and are particularly well suited for multi-step analyses using different types of software tools. They are also favorable in terms of reusability, as previously designed workflows could be made publicly available through the myExperiment community and then used in other workflows. We here illustrate how scientific workflows and the Taverna workbench in particular can be used in bibliometrics. We discuss the specific capabilities of Taverna that makes this software a powerful tool in this field, such as automated data import via Web services, data extraction from XML by XPaths, and statistical analysis and visualization with R. The support of the latter is particularly relevant, as it allows integration of a number of recently developed R packages specifically for bibliometrics. Examples are used to illustrate the possibilities of Taverna in the fields of bibliometrics and scientometrics.},
 	URL = {https://europepmc.org/articles/PMC4833826},
 }
+@article {PMID30702898,
+	Title = {Progress and Challenges in Ocean Metaproteomics and Proposed Best Practices for Data Sharing},
+	Author = {Saito, Mak A and Bertrand, Erin M and Duffy, Megan E and Gaylord, David A and Held, Noelle A and Hervey, William Judson and Hettich, Robert L and Jagtap, Pratik D and Janech, Michael G and Kinkade, Danie B and Leary, Dagmar H and McIlvin, Matthew R and Moore, Eli K and Morris, Robert M and Neely, Benjamin A and Nunn, Brook L and Saunders, Jaclyn K and Shepherd, Adam I and Symmonds, Nicholas I and Walsh, David A},
+	DOI = {10.1021/acs.jproteome.8b00761},
+	Number = {4},
+	Volume = {18},
+	Month = {April},
+	Year = {2019},
+	Journal = {Journal of proteome research},
+	ISSN = {1535-3893},
+	Pages = {1461—1476},
+	Abstract = {Ocean metaproteomics is an emerging field enabling discoveries about marine microbial communities and their impact on global biogeochemical processes. Recent ocean metaproteomic studies have provided insight into microbial nutrient transport, colimitation of carbon fixation, the metabolism of microbial biofilms, and dynamics of carbon flux in marine ecosystems. Future methodological developments could provide new capabilities such as characterizing long-term ecosystem changes, biogeochemical reaction rates, and in situ stoichiometries. Yet challenges remain for ocean metaproteomics due to the great biological diversity that produces highly complex mass spectra, as well as the difficulty in obtaining and working with environmental samples. This review summarizes the progress and challenges facing ocean metaproteomic scientists and proposes best practices for data sharing of ocean metaproteomic data sets, including the data types and metadata needed to enable intercomparisons of protein distributions and annotations that could foster global ocean metaproteomic capabilities.},
+	URL = {https://europepmc.org/articles/PMC7575043},
+}
