hand-crafted approach intro and examples

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -19,6 +19,32 @@
 	Abstract = {Science across all disciplines has become increasingly data-driven, leading to additional needs with respect to software for collecting, processing and analysing data. Thus, transparency about software used as part of the scientific process is crucial to understand provenance of individual research data and insights, is a prerequisite for reproducibility and can enable macro-analysis of the evolution of scientific methods over time. However, missing rigor in software citation practices renders the automated detection and disambiguation of software mentions a challenging problem. In this work, we provide a large-scale analysis of software usage and citation practices facilitated through an unprecedented knowledge graph of software mentions and affiliated metadata generated through supervised information extraction models trained on a unique gold standard &lt;i&gt;corpus&lt;/i&gt; and applied to more than 3 million scientific articles. Our information extraction approach distinguishes different types of software and mentions, disambiguates mentions and outperforms the state-of-the-art significantly, leading to the most comprehensive &lt;i&gt;corpus&lt;/i&gt; of 11.8 M software mentions that are described through a knowledge graph consisting of more than 300 M triples. Our analysis provides insights into the evolution of software usage and citation patterns across various fields, ranks of journals, and impact of publications. Whereas, to the best of our knowledge, this is the most comprehensive analysis of software use and citation at the time, all data and models are shared publicly to facilitate further research into scientific use and citation of software.},
 	URL = {https://europepmc.org/articles/PMC8771769},
 }
+@inproceedings{10.1145/3459637.3481936,
+	author = {Lopez, Patrice and Du, Caifan and Cohoon, Johanna and Ram, Karthik and Howison, James},
+	title = {Mining Software Entities in Scientific Literature: Document-level NER for an Extremely Imbalance and Large-scale Task},
+	year = {2021},
+	isbn = {9781450384469},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	url = {https://doi.org/10.1145/3459637.3481936},
+	doi = {10.1145/3459637.3481936},
+	abstract = {We present a comprehensive information extraction system dedicated to software entities in scientific literature. This task combines the complexity of automatic reading of scientific documents (PDF processing, document structuring, styled/rich text, scaling) with challenges specific to mining software entities: high heterogeneity and extreme sparsity of mentions, document-level cross-references, disambiguation of noisy software mentions and poor portability of Machine Learning approaches between highly specialized domains. While NER is a key component to recognize new and unseen software, considering this task as a simple NER application fails to address most of these issues.In this paper, we propose a multi-model Machine Learning approach where raw documents are ingested by a cascade of document structuring processes applied not to text, but to layout token elements. The cascading process further enriches the relevant structures of the document with a Deep Learning software mention recognizer adapted to the high sparsity of mentions. The Machine Learning cascade culminates with entity disambiguation to alleviate false positives and to provide software entity linking. A bibliographical reference resolution is integrated to the process for attaching references cited alongside the software mentions.Based on the first gold-standard annotated dataset developed for software mentions, this work establishes a new reference end-to-end performance for this task. Experiments with the CORD-19 publications have further demonstrated that our system provides practically usable performance and is scalable to the whole scientific corpus, enabling novel applications for crediting research software and for better understanding the impact of software in science.},
+	booktitle = {Proceedings of the 30th ACM International Conference on Information \& Knowledge Management},
+	pages = {3986–3995},
+	numpages = {10},
+	keywords = {software, scientific literature, entity recognition, entity disambiguation, document analysis},
+	location = {Virtual Event, Queensland, Australia},
+	series = {CIKM '21}
+}
+@misc{druskat2024dontmentionitapproach,
+      title={Don't mention it: An approach to assess challenges to using software mentions for citation and discoverability research},
+      author={Stephan Druskat and Neil P. Chue Hong and Sammie Buzzard and Olexandr Konovalov and Patrick Kornek},
+      year={2024},
+      eprint={2402.14602},
+      archivePrefix={arXiv},
+      primaryClass={cs.SE},
+      url={https://arxiv.org/abs/2402.14602},
+}
 @article {PMID23148064,
 	Title = {Comet: an open-source MS/MS sequence database search tool},
 	Author = {Eng, Jimmy K and Jahan, Tahmina A and Hoopmann, Michael R},
@@ -208,4 +234,18 @@
 	Pages = {1461—1476},
 	Abstract = {Ocean metaproteomics is an emerging field enabling discoveries about marine microbial communities and their impact on global biogeochemical processes. Recent ocean metaproteomic studies have provided insight into microbial nutrient transport, colimitation of carbon fixation, the metabolism of microbial biofilms, and dynamics of carbon flux in marine ecosystems. Future methodological developments could provide new capabilities such as characterizing long-term ecosystem changes, biogeochemical reaction rates, and in situ stoichiometries. Yet challenges remain for ocean metaproteomics due to the great biological diversity that produces highly complex mass spectra, as well as the difficulty in obtaining and working with environmental samples. This review summarizes the progress and challenges facing ocean metaproteomic scientists and proposes best practices for data sharing of ocean metaproteomic data sets, including the data types and metadata needed to enable intercomparisons of protein distributions and annotations that could foster global ocean metaproteomic capabilities.},
 	URL = {https://europepmc.org/articles/PMC7575043},
+}
+@article {PMID22253597,
+	Title = {The bZIP transcription factor Rca1p is a central regulator of a novel CO₂ sensing pathway in yeast},
+	Author = {Cottier, Fabien and Raymond, Martine and Kurzai, Oliver and Bolstad, Marianne and Leewattanapasuk, Worraanong and Jiménez-López, Claudia and Lorenz, Michael C and Sanglard, Dominique and Váchová, Libuše and Pavelka, Norman and Palková, Zdena and Mühlschlegel, Fritz A},
+	DOI = {10.1371/journal.ppat.1002485},
+	Number = {1},
+	Volume = {8},
+	Month = {January},
+	Year = {2012},
+	Journal = {PLoS pathogens},
+	ISSN = {1553-7366},
+	Pages = {e1002485},
+	Abstract = {Like many organisms the fungal pathogen Candida albicans senses changes in the environmental CO(2) concentration. This response involves two major proteins: adenylyl cyclase and carbonic anhydrase (CA). Here, we demonstrate that CA expression is tightly controlled by the availability of CO(2) and identify the bZIP transcription factor Rca1p as the first CO(2) regulator of CA expression in yeast. We show that Rca1p upregulates CA expression during contact with mammalian phagocytes and demonstrate that serine 124 is critical for Rca1p signaling, which occurs independently of adenylyl cyclase. ChIP-chip analysis and the identification of Rca1p orthologs in the model yeast Saccharomyces cerevisiae (Cst6p) point to the broad significance of this novel pathway in fungi. By using advanced microscopy we visualize for the first time the impact of CO(2) build-up on gene expression in entire fungal populations with an exceptional level of detail. Our results present the bZIP protein Rca1p as the first fungal regulator of carbonic anhydrase, and reveal the existence of an adenylyl cyclase independent CO(2) sensing pathway in yeast. Rca1p appears to regulate cellular metabolism in response to CO(2) availability in environments as diverse as the phagosome, yeast communities or liquid culture.},
+	URL = {https://europepmc.org/articles/PMC3257301},
 }
